Refactor accordion logic, update FAQ design, and add README.
- Refactored JavaScript accordion logic by wrapping functionality in a reusable `toggleAccordion` function, improving code structure and maintainability.
- Updated FAQ container's max width in `base-styles.css` from 700px to 800px to improve layout and reflect design changes.
- Modified page title in `index.html` from "Simple FAQ Page" to "Advanced-FAQ-Page" to signify the enhanced version.
- Added a comprehensive `README.md` file to provide project documentation, including features, structure, learning outcomes, and author credits.
- Uploaded `Screenshot.png` in the `resources` directory, showcasing the updated FAQ page design.

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     <meta property="og:description" content="Browse through the most frequently asked questions on our FAQ page. Learn about order tracking, return policies, and much more.">
     <meta property="og:type" content="website">
     
-    <title>Simple FAQ Page</title>
+    <title>Advanced-FAQ-Page</title>
 
     <!-- Styles section -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="./styles/color-pallet.css" type="text/css">
     <link rel="stylesheet" href="./styles/base-styles.css" type="text/css">
     <link rel="stylesheet" href="./styles/responsive-styles.css" type="text/css">
+
     <script src="./script.js" type="text/javascript" defer></script>
 </head>
 
